[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "yaqd_newport"
dist-name = "yaqd-newport"
author = "yaq Developers"
author-email = "git@ksunden.space"
home-page = "https://yaq.fyi"
description-file = "README.md"
requires-python = ">=3.7"
requires = ["yaqd-core>=2020.10.1", "pyserial"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Topic :: Scientific/Engineering",
]

[tool.flit.metadata.urls]
Source = "https://github.com/yaq-project/yaqd-newport"
Issues = "https://github.com/yaq-project/yaqd-newport/issues"

[tool.flit.metadata.requires-extra]
dev = ["black", "pre-commit"]

[tool.flit.scripts]
yaqd-newport-smc100="yaqd_newport._newport_smc100:NewportSMC100.main"
yaqd-newport-conex-agp="yaqd_newport._newport_conex_agp:NewportConexAGP.main"

[tool.black]
line-length = 99
target-version = ['py37', 'py38']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | build
  | dist
)/
'''
