[build-system]
requires = ["flit_core >=3.2"]
build-backend = "flit_core.buildapi"

[project]
name = "yaqd-newport"
authors = [
  {name="Kyle Sunden", email="git@ksunden.space"}
]
maintainers = [
  {name="yaq developers"},
]
readme = "README.md"
requires-python = ">=3.7"
dependencies = ["yaqd-core>=2023.6.0", "pyserial"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering",
]
dynamic = ["version", "description"]

[project.urls]
Homepage = "https://yaq.fyi"
Source = "https://github.com/yaq-project/yaqd-newport"
Issues = "https://github.com/yaq-project/yaqd-newport/issues"

[tool.flit.module]
name = "yaqd_newport"

[tool.optional-dependencies]
dev = ["black", "pre-commit"]

[project.scripts]
yaqd-newport-smc100="yaqd_newport._newport_smc100:NewportSMC100.main"
yaqd-newport-conex-agp="yaqd_newport._newport_conex_agp:NewportConexAGP.main"

[tool.black]
line-length = 99
target-version = ['py37', 'py38']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | build
  | dist
)/
'''
